@@ -258,6 +258,7 @@ KoText library fixes:
 
 Layout:
 - Fixed layout of paragraph numbering in Right-To-Left mode.
+- First line indent is now from the right in Right-To-Left mode.
 
 Crashes:
 - Fixed crash when removing pages (and the page number is shown in header/footer)
